# cloudflare-rust-todo-app

./: .gitignore  DEVELOPMENT.md  DOCS.md  ENVIRONMENT_SETUP.md  README.md  openapi.yaml  package.json  prek.toml
.husky/: pre-push
front/: .env.example  .gitignore  README.md  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  wrangler.jsonc
front/.husky/: pre-push
front/src/lib/: api.ts  config.ts  pwa.ts
front/src/routes/: +layout.svelte  +page.svelte
front/static/: manifest.json  sw.js
my-rust-worker/: Cargo.toml  wrangler.toml
my-rust-worker/src/: handlers.rs  lib.rs  request.rs
