[package]
name = "my-rust-worker"
version = "0.1.0"
edition = "2021"
authors = ["yut-wq <println856@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.7", features = ['http', 'axum'] }
worker-macros = { version = "0.7", features = ['http'] }
axum = { version = "0.8", default-features = false, features = ["json"] }
tower-service = "0.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6", features = ["cors"] }
js-sys = "0.3"
lazy_static = "1.4"
